%% MANUAL - Update when models change
classDiagram
    class StockInfo {
        +string Symbol
        +string ShortName
        +string LongName
        +decimal Price
        +decimal Change
        +decimal ChangePercent
        +decimal? MarketCap
        +decimal? Volume
        +string? Exchange
        +string? Industry
        +string? Isin
        +string? Cusip
        +string? Sedol
    }

    class OhlcvData {
        +DateTime Date
        +decimal Open
        +decimal High
        +decimal Low
        +decimal Close
        +long Volume
    }

    class HistoricalDataResult {
        +string Symbol
        +string Period
        +List~OhlcvData~ Data
    }

    class NewsItem {
        +string Title
        +string Summary
        +string Url
        +string? ImageUrl
        +string Source
        +DateTime PublishedAt
    }

    class SignificantMove {
        +DateTime Date
        +decimal ChangePercent
        +decimal Close
        +string Direction
        +List~NewsItem~ RelatedNews
    }

    class RsiData {
        +DateTime Date
        +decimal Value
    }

    class MacdData {
        +DateTime Date
        +decimal Macd
        +decimal Signal
        +decimal Histogram
    }

    HistoricalDataResult o-- OhlcvData : contains
    SignificantMove o-- NewsItem : has related
